--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-Sleuth2
-url = https://cran.r-project.org/src/contrib/Sleuth2_2.0-4.tar.gz
+url = https://cran.r-project.org/src/contrib/Sleuth2_2.0-4.1.tar.gz
 archives = 
 giturl = 
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
